install memcached on fpm and enable rewrite module on apache

--- a/apache/mods-available_old/fastcgi.conf
+++ b/apache/mods-available_old/fastcgi.conf
@@ -1,5 +1,5 @@
 <IfModule mod_fastcgi.c>
-    FastCGIExternalServer /usr/sbin/php5-fpm -host php:9000
+    FastCGIExternalServer /usr/sbin/php5-fpm -host php-fpm:9000
     AddHandler php5-fastcgi .php
      
     Action php5-fastcgi /usr/sbin/php5-fpm.fcgi
